Fix conflicts with external declarations when using the C++ compiler

--- a/src/c/Makefile.in
+++ b/src/c/Makefile.in
@@ -87,7 +87,7 @@ flatinstall: $(HFILES)
 	ranlib $@
 
 clean:
-	$(RM) dpp *.c $(OBJS) ../libecl.a cinit.o core a.out
+	$(RM) dpp *.c *.h $(OBJS) ../libecl.a cinit.o core a.out
 
 # Build rules
 
