--- a/src/configure.in
+++ b/src/configure.in
@@ -33,7 +33,7 @@ exit 2;
 fi
 
 dnl Set the version number. This seems the best place to keep it.
-ECL_VERSION=0.9d
+ECL_VERSION=0.9e
 AC_SUBST(ECL_VERSION)
 
 dnl Guess operating system of host. We do not allow cross-compiling.
