Thread support for Mingw32

--- a/src/compile.lsp.in
+++ b/src/compile.lsp.in
@@ -95,7 +95,7 @@ ranlib ../@LIBPREFIX@ecl.@LIBEXT@'")
 ;;; We do not need the -rpath flag for the library, nor -lecl.
 ;;;
 (let ((c::*ld-shared-flags* #-msvc "@SHARED_LDFLAGS@ @LDFLAGS@ @STATICLIBS@ @CLIBS@"
-			    #+msvc "@SHARED_LDFLAGS@ @LDFLAGS@ @STATICLIBS@ @CLIBS@ /DEF:ecl.def")
+			    #+msvc "@SHARED_LDFLAGS@ @LDFLAGS@ @STATICLIBS@ @CLIBS@ /DEF:@DEF@")
       (c::*cc-flags* (concatenate 'string "-I@true_builddir@/c " c::*cc-flags*)))
   (c::shared-cc (compile-file-pathname "ecl" :type :dll)
 		"c/main.@OBJEXT@"
