--- a/src/configure.in
+++ b/src/configure.in
@@ -51,55 +51,68 @@ AC_SUBST(top_srcdir)
 dnl AC_ARG_ENABLE(tk,
 dnl 	[--enable-tk            Include Tk.],
 dnl 	tk="$enable_tk")
-AC_ARG_WITH(clx,
-	[--with-clx             Include CLX.],
-	clx="yes")
-AC_ARG_WITH(tcp,
-	[--with-tcp             Include socket interface.],
-	tcp="yes")
 AC_ARG_ENABLE(boehm,
-	[--disable-boehm        Disable Boehm's garbage collector.],
-	boehm="${enableval}",boehm="yes")
+	AS_HELP_STRING([--enable-boehm],
+		       [use the Boehm-Weiser garbage collector (default is YES)]),
+	[boehm="${enableval}"], [boehm=yes])
 AC_ARG_ENABLE(local-boehm,
-	[--enable-local-boehm   Use already installed Boehm GC library.],
-	[local_boehm="${enableval}" boehm="yes"],local_boehm="no")
+	AS_HELP_STRING([--enable-local-boehm],
+		       [use already installed Boehm GC library (default is NO)]),
+	[local_boehm="${enableval}" boehm="yes"], [local_boehm=no])
 AC_ARG_ENABLE(local-gmp,
-	[--enable-local-gmp     Use already installed GMP library.],
-	local_gmp="${enableval}",local_gmp="no")
-AC_ARG_WITH(gmp,
-	[--with-gmp=args        Configure supplied GMP library with arguments.],
-	[gmp_flags=${withval}; local_gmp="no"],
-	gmp_flags="")
-AC_ARG_WITH(cross_config,
-	[--with-config-file=f	Supply configuration for a cross compiler.],
-	cross_config="${withval}", cross_config="`pwd`/cross_config")
+	AS_HELP_STRING([--enable-local-gmp],
+		       [use already installed GMP library (default is NO)]),
+	[local_gmp="${enableval}"], [local_gmp=no])
 dnl AC_ARG_ENABLE(locative,
 dnl 	[--enable-locative      Include locative support.],
 dnl 	locative="$enable_locative")
-AC_ARG_ENABLE(threads,
-	[--enable-threads       Include the multiple thread facility.],
-	threads="$enable_threads")
+AC_ARG_ENABLE(opcode8,
+	AS_HELP_STRING([--enable-opcode8],
+		       [interpreter uses 8-bit codes (default is NO, only works on Intel)]),
+	[opcode8=${enableval}], [opcode8=no])
 dnl AC_ARG_ENABLE(runtime,
 dnl 	[--enable-runtime	Build no compiler.],
 dnl 	runtime="$enable_runtime")
 AC_ARG_ENABLE(shared,
-	[--disable-shared       Disable building dynamically loadable extensions.],
-	shared="$enable_shared",shared="yes")
-AC_ARG_WITH(oldloop,
-	[--with-oldloop         Use the old MIT LOOP macro.],
-	oldloop="yes")
+	AS_HELP_STRING([--enable-shared],
+		       [enable loading compiled files (default is YES)]),
+	[shared="$enable_shared"], [shared=yes])
+AC_ARG_ENABLE(threads,
+	AS_HELP_STRING([--enable-threads],
+		       [support for native threads (default is NO).]),
+	[threads="$enable_threads"])
+
+AC_ARG_WITH(cross_config,
+	AS_HELP_STRING([--with-config-file=f],
+		       [supply configuration for a cross compiler]),
+	[cross_config="${withval}"], [cross_config="`pwd`/cross_config"])
+dnl AC_ARG_WITH(oldloop,
+dnl	AS_HELP_STRING([--with-oldloop],[use the old MIT LOOP macro (default is NO)]),
+dnl	oldloop="yes")
 AC_ARG_WITH(cmuformat,
-	[--without-cmuformat    Use the FORMAT routine from CMUCL.],
-	cmuformat="${withval}",cmuformat="yes")
+	AS_HELP_STRING([--with-cmuformat],
+		       [use CMUCL's FORMAT routine (default is YES)]),
+	[cmuformat="${withval}"], [cmuformat=yes])
 AC_ARG_WITH(clos-streams,
-	[--with-clos-streams    Allow user defined stream objects.],
-	closstreams="${withval}",closstreams="no")
+	AS_HELP_STRING([--with-clos-streams],
+		       [user defined stream objects (default is YES)]),
+	[closstreams="${withval}"], [closstreams=yes])
+AC_ARG_WITH(clx,
+	AS_HELP_STRING([--with-clx],
+		       [include CLX library (default is NO)]),
+	[clx=yes])
 AC_ARG_WITH(cxx,
-	[--with-cxx             Build ECL using C++ compiler.],
-	usecxx="${withval}",usecxx="no")
-AC_ARG_ENABLE(opcode8,
-	[--enable-opcode8       Interpreter uses 8-bit codes (only Intel!).],
-	opcode8=${enableval},opcode8="no")
+	AS_HELP_STRING([--with-cxx],
+		       [build ECL using C++ compiler (default is NO)]),
+	[usecxx="${withval}"], [usecxx=no])
+AC_ARG_WITH(gmp,
+	AS_HELP_STRING([--with-gmp=args],
+		       [supply arguments for configuring GMP library]),
+	[gmp_flags=${withval}; local_gmp=no], [gmp_flags=""])
+AC_ARG_WITH(tcp,
+	AS_HELP_STRING([--with-tcp],
+		       [include socket interface (default is NO)]),
+	[tcp=yes])
 
 ### ----------------------------------------------------------------------
 ###           Checks for programs
@@ -332,26 +345,19 @@ dnl AC_C_CHAR_UNSIGNED     # DEFS __CHAR_UNSIGNED__ if char is unsigned
 dnl ---------------------------------------------------------------------
 dnl	      X11 stuff
 dnl
-AC_PATH_X
-AC_PATH_XTRA
- 
-XINCLUDES=""
-XLIBS=""
- 
-if test "$x_includes" != "" 
-then 
-  XINCLUDES=-I$x_includes
-fi
- 
-if test "$x_libraries" != ""
-then
-   XLIBS="-L$x_libraries"
-fi
-
-AC_SUBST(XINCLUDES)
-AC_SUBST(XLIBS)
-
-XLIBS="$XLIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS"
+dnl AC_PATH_X
+dnl AC_PATH_XTRA
+dnl XINCLUDES=""
+dnl XLIBS=""
+dnl if test "$x_includes" != ""; then
+dnl   XINCLUDES=-I$x_includes
+dnl fi
+dnl if test "$x_libraries" != ""; then
+dnl    XLIBS="-L$x_libraries"
+dnl fi
+dnl AC_SUBST(XINCLUDES)
+dnl AC_SUBST(XLIBS)
+dnl XLIBS="$XLIBS $X_PRE_LIBS -lX11 $X_EXTRA_LIBS"
 
 dnl ---------------------------------------------------------------------
 dnl		GNU multiprecision library
