--- a/src/bare.lsp.in
+++ b/src/bare.lsp.in
@@ -66,6 +66,17 @@
 		object))
 	  sources))
 
+(defun build-module (name sources &key (dir "build:") ((:prefix si::*init-function-prefix*) "EXT"))
+  (proclaim '(optimize (safety 2) (speed 1)))
+  (let* ((objects (compile-if-old "build:ext;" sources :system-p t :c-file t :data-file t :h-file t))
+	 (name (string-downcase name)))
+    #-dlopen
+    (warn "~%Unable to build module ~A because dynamic linking is not available on this platform"
+	  name)
+    #+dlopen
+    (c::build-fasl name :lisp-files objects)))
+
+
 ;;;
 ;;; * Go back to build directory to start compiling
 ;;;
